--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .logo{
-  width: 500px;
+  width: 50px;
+  height: 10px;
+}
+
+body{
+  margin:0 ;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: black;
 }
