--- a/src/Components/styles/SidebarNav.scss
+++ b/src/Components/styles/SidebarNav.scss
@@ -9,6 +9,7 @@
     display: block;
     height: 100%;
     box-sizing: border-box;
+
     &:focus-within{
         box-shadow: inset 0px 0px 0px 4px cyan;
     }
@@ -21,7 +22,6 @@
 }
 
 
-
 .sidebar {
     width: 200px;
     background-color: white;
@@ -32,6 +32,7 @@
     box-shadow: 7px 0px 17px 0px rgba(0,0,0,0.75);
     transform: translate(0);
     transition: all 0.2s linear;
+    z-index: 100;
     &--closed {
         box-shadow: none;
         transform: translate(-200px);
