--- a/src/Components/styles/Quiz.scss
+++ b/src/Components/styles/Quiz.scss
@@ -33,7 +33,7 @@
         background-color: transparent;
 		&-prev {
             background-color: transparent;
-            opacity: 0;
+            // opacity: 0;
             overflow: hidden;
 			&--fake {
 				font-size: 50px;
