change catagory div to radiobutton

--- a/src/Components/styles/Modal.scss
+++ b/src/Components/styles/Modal.scss
@@ -48,8 +48,9 @@
         border: 1px solid #ddd;
         border-radius: 0.3rem;
         padding: 2%;
-        margin-top: 7%;
+        margin: 7% 1% 0 1%;
         font-size: 11px;
+        
         &--blue{
             color: #fff;
             background-color: #1293D6;
