--- a/src/Components/styles/Main.scss
+++ b/src/Components/styles/Main.scss
@@ -16,6 +16,7 @@
 		@extend %flexCCC;
 		margin: 6% 2% 3% 2%;
 
+
 		&-input {
 			border: 0;
 			padding: 0;
@@ -25,6 +26,8 @@
 			opacity: 0;
 			position: absolute;
 			overflow: hidden;
+			top: 50%;
+			left: 50%;
 			&:checked {
 				+ div.main__radiobtn--fake {
 					border-color: #6200eeff;
@@ -60,6 +63,7 @@
 			}
 		}
 		&--fake {
+			
 			&::after {
 				content: "";
 				display: block;
@@ -69,10 +73,9 @@
 				border-radius: 50%;
 				position: absolute;
 				box-shadow: 0px 0px 1px rgb(101, 100, 100);
-				top: 100%;
+				top: 50%;
 				left: 50%;
-				transform: translate(-50%);
-				margin-top: -12.5px;
+				transform: translate(-50%, 50%);
 				opacity: 0;
 				transition: all .3s ease;
 			}
