--- a/src/Components/styles/Quiz.scss
+++ b/src/Components/styles/Quiz.scss
@@ -47,13 +47,11 @@
 		&:focus{
 			outline: none;
 		}
-	
 	}
 
-	&__text-loading {
-	}
 	&__section {
 		@extend %flexCCC;
+		width: 100%;
 
 	}
 	&__text-question {
@@ -122,6 +120,7 @@
 		&--fake {
 			width: 20px;
 			height: 20px;
+			margin: 0 1%;
 			position: relative;
 			background-color: white;
 			border-radius: 50px 50px;
@@ -159,7 +158,8 @@
 		}
 		&-option {
 			margin-left: 20px;
-			width: 50%;
+			width: 80%;
+	
 		}
 	}
 }
