--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,19 @@ body{
   margin:0 ;
   padding: 0;
   box-sizing: border-box;
-  background-color: black;
+  height: 100%;
+  background: url("./materials/BgNoLOGO.svg");
+  /* background: linear-gradient(
+        0deg,
+        rgba(232, 230, 230, 0.776),
+        rgba(218, 218, 218, 0.794)
+      ),
+      url("./materials/BgNoLOGO.svg"); */
+
+  background-repeat: no-repeat;
+  /* background-attachment: fixed; */
+  background-size: cover;
+  /* background-color: black;  */
+    
+
 }
