--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,14 @@ body{
   margin:0 ;
   padding: 0;
   box-sizing: border-box;
-  height: 100%;
-  background: url("./materials/BgNoLOGO.svg");
-  /* background: linear-gradient(
-        0deg,
-        rgba(232, 230, 230, 0.776),
-        rgba(218, 218, 218, 0.794)
-      ),
-      url("./materials/BgNoLOGO.svg"); */
+  height: 100vh;
+  /* background: url("./materials/BgNoLOGO.svg") no-repeat; */
+  background: linear-gradient(0deg, rgba(230, 230, 230, 0.105), rgba(162, 162, 162, 0.036)),
+  url("./materials/BgNoLOGO.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 
-  background-repeat: no-repeat;
-  /* background-attachment: fixed; */
-  background-size: cover;
-  /* background-color: black;  */
     
 
 }
