--- a/src/Components/styles/Quiz.scss
+++ b/src/Components/styles/Quiz.scss
@@ -3,14 +3,22 @@
 .quiz {
 	color: white;
 
+
 	&__title {
 		padding: 2%;
+		font-size: 1.8rem;
+	}
+	&__icon-catagory{
+		@extend %flexJC;
+		padding: 10px 0;
 	}
 	&__container {
 		width: 100%;
+ 
 		@extend %flexCCC;
 		position: relative;
 	}
+
 	&__button {
 		position: absolute;
 		top: 50%;
@@ -62,6 +70,7 @@
 		hyphens: auto;
 		width: 70%;
 		text-align: left;
+		font-size: 1.2rem;
 	
 	}
 	&__radiobtn {
@@ -69,7 +78,7 @@
 		display: flex;
 		align-items: center;
 		border: 1px solid white;
-		padding: 3%;
+		padding: 2%;
 		border-radius: 10px;
 		overflow-wrap: break-word;
 		word-wrap: break-word;
@@ -159,6 +168,8 @@
 		&-option {
 			margin-left: 20px;
 			width: 80%;
+			font-size: 1rem;
+			font-weight: 500;
 	
 		}
 	}
