--- a/src/Components/styles/SidebarNav.scss
+++ b/src/Components/styles/SidebarNav.scss
@@ -1,5 +1,7 @@
+@import "./variables";
+
 .mask{
-    background-color: rgba(147, 147, 147, 0.365);
+    background-color: rgba(187, 186, 186, 0.509);
     border: none;
     position:absolute;
     top: 0;
@@ -29,7 +31,7 @@
     left: 0;
     top: 0;
     height: 100vh;
-    box-shadow: 7px 0px 17px 0px rgba(0,0,0,0.75);
+    box-shadow: 7px 0px 15px 0px rgba(46, 46, 46, 0.75);
     transform: translate(0);
     transition: all 0.2s linear;
     z-index: 100;
@@ -38,28 +40,38 @@
         transform: translate(-200px);
         visibility: hidden;
     }
+    &__icon-logo{
+        width: 100%;
+        height: 20%;
+        background-color: #0c0c43;
+    }
     &__menu {
         list-style: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        @extend %flexCAC;
         padding: 0;
+        height: 80%;
+        background-color: #212052;
+
         &-item {
-            margin: 10px 0px;
+            margin: 1% 0px;
             width: 100%;
             display: inline-block;
             &:hover, &:focus{
-                background-color: rgba(182, 179, 179, 0.769);
+                background-color: #414040b3;
+               
             }
         }
         &-link{
             width: 100%;
             display: inline-block;
             text-decoration: none;
-            color: #000;
+            padding: 2% 10%;
+            color: rgb(235, 235, 235);
             font-size: 30px;
+            text-align: center;
             &:hover, &:focus{
                 text-decoration: none;
+                color: #58D1E4;
             }
 
         }
