--- a/src/Components/styles/_variables.scss
+++ b/src/Components/styles/_variables.scss
@@ -15,3 +15,17 @@
 	align-items: center;
 }
 
+%flexCAC{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+%logo{
+	background-color: #27C5D8;
+}
+
+%bg-DarkBlue{
+	background-color: #0D0C45;
+
+}
