--- a/src/Components/styles/Quiz.scss
+++ b/src/Components/styles/Quiz.scss
@@ -3,7 +3,6 @@
 .quiz {
 	color: white;
 
-
 	&__title {
 		padding: 2%;
 		font-size: 1.8rem;
@@ -36,7 +35,6 @@
 				>.quiz__button-next--fake{
 					color: rgb(0, 217, 255);
 				}
-				
 			}
 		}
 		&-prev {
@@ -54,6 +52,20 @@
 		}
 		&:focus{
 			outline: none;
+		}
+		&-result{
+			width: 8rem;
+        text-align: center;
+        margin: 5%;
+        color: white;
+        text-decoration: none;
+        font-weight: 500;
+        &:hover{
+            text-decoration: none;
+            color: white;
+            font-weight: 700;
+          
+        }
 		}
 	}
 
