--- a/src/Components/styles/Stats.scss
+++ b/src/Components/styles/Stats.scss
@@ -2,6 +2,7 @@
 
 .stats{
     color: white;
+    @extend %flexCCC;
     &__title{
         color: grey;
     }
@@ -12,18 +13,15 @@
         }
     }
 
-    &__progress{
-        width: 90%;
+    &__session{
+        width: 100%;
         @extend %flexRCC;
         flex-wrap: wrap;
+        padding: 5% 0;
 
         &-ctn{
-            width: 180px;
-            margin: 3%;
-            &--correctRate{
-                width: 250px;
-            }
-            
+            width: 130px;
+            margin: 3% 0;   
         }
 
         &--img{
@@ -32,8 +30,25 @@
 
         }
         &--text{
-            font-size: 1rem;
+            font-size: 2rem;
             margin: -5px 0 1px 0;
+            padding: 0 10%;
+            &-sub{
+                color:  white;
+                padding: 0 10%;
+            }
+
+        }
+
+    }
+    &__progress{
+        width: 200px;
+        margin: 3% 0;
+
+        &--text{
+            font-size: 2rem;
+            margin: -5px 0 1px 0;
+         
             &-sub{
                 color:  white;
             }
@@ -41,18 +56,25 @@
         }
 
     }
+    &__container-btn{
+        width: 100%;
+        @extend %flexJC;
+        margin-top: 0%;
+    }
     
     &__button{
-        &-home{
-            display: inline-block;
-            width: 100%;
-            height: 100%;
-            color: white;
+        width: 8rem;
+        text-align: center;
+        margin: 5%;
+        color: white;
+        text-decoration: none;
+        font-weight: 500;
+        &:hover{
             text-decoration: none;
-            &:hover{
-                text-decoration: none;
-                color: white;
-            }
+            color: white;
+            font-weight: 700;
+          
         }
+        
     }
 }
