--- a/src/Components/styles/Quiz.scss
+++ b/src/Components/styles/Quiz.scss
@@ -2,6 +2,7 @@
 
 .quiz {
 	color: white;
+	height: 100%;
 
 	&__title {
 		padding: 2%;
@@ -9,11 +10,11 @@
 	}
 	&__icon-catagory{
 		@extend %flexJC;
-		padding: 10px 0;
+		padding: 5px 0;
 	}
 	&__container {
 		width: 100%;
- 
+		height: 70%;
 		@extend %flexCCC;
 		position: relative;
 	}
@@ -54,12 +55,13 @@
 			outline: none;
 		}
 		&-result{
-			width: 8rem;
+		width: 8rem;
         text-align: center;
         margin: 5%;
         color: white;
         text-decoration: none;
-        font-weight: 500;
+		font-weight: 500;
+		margin: 2% 0 0 0;
         &:hover{
             text-decoration: none;
             color: white;
