--- a/src/Components/styles/Stats.scss
+++ b/src/Components/styles/Stats.scss
@@ -44,7 +44,7 @@
     &__progress{
         width: 200px;
         margin: 3% 0;
-
+     
         &--text{
             font-size: 2rem;
             margin: -5px 0 1px 0;
@@ -63,18 +63,7 @@
     }
     
     &__button{
-        width: 8rem;
-        text-align: center;
-        margin: 5%;
-        color: white;
-        text-decoration: none;
-        font-weight: 500;
-        &:hover{
-            text-decoration: none;
-            color: white;
-            font-weight: 700;
-          
-        }
+      @extend %btn;
         
     }
 }
