--- a/src/Components/styles/_variables.scss
+++ b/src/Components/styles/_variables.scss
@@ -29,3 +29,19 @@
 	background-color: #0D0C45;
 
 }
+
+
+%btn{
+	width: 8rem;
+	text-align: center;
+	margin: 5%;
+
+	color: #0c0b45;
+	text-decoration: none;
+	font-weight: 600;
+	&:hover{
+		text-decoration: none;
+		color: white;
+		font-weight: 700; 
+	}
+}
