added useRef for focus

--- a/src/Components/styles/Header.scss
+++ b/src/Components/styles/Header.scss
@@ -12,5 +12,11 @@
 		line-height: 20px;
 		color: white;
 		background: rgb(42, 42, 101);
+		&:hover {
+			border: 1px solid blue;
+		}
+		&:focus{
+			border: 1px solid blue;
+		}
 	}
 }
