--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,7 @@ body{
   padding: 0;
   box-sizing: border-box;
   height: 100vh;
-  /* background: url("./materials/BgNoLOGO.svg") no-repeat; */
-  background: linear-gradient(0deg, rgba(230, 230, 230, 0), rgba(162, 162, 162, 0)),
-  url("./materials/BgNoLOGO.svg");
+  background: url("./materials/BgNoLOGO.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
