--- a/src/Components/styles/Header.scss
+++ b/src/Components/styles/Header.scss
@@ -13,10 +13,10 @@
 		color: white;
 		background: rgb(42, 42, 101);
 		&:hover {
-			border: 1px solid blue;
+			background-color: #007bfe;
 		}
 		&:focus{
-			border: 1px solid blue;
+			box-shadow: 0px 0px 3px 3px rgb(0, 238, 255);
 		}
 	}
 }
