--- a/src/Components/styles/Main.scss
+++ b/src/Components/styles/Main.scss
@@ -10,6 +10,9 @@
 		@extend %flexRCC;
 		flex-wrap: wrap;
 		flex-grow: 1;
+		&:focus {
+			outline: none;
+		}
 	}
 
 	&__radiobtn {
@@ -29,43 +32,50 @@
 			left: 50%;
 			&:checked {
 				+ div.main__radiobtn--fake {
-					border-color: #6200eeff;
-					&::after {
-						background: #6200eeff;
-						opacity: 1;
+					> .main__img {
+						-webkit-filter: drop-shadow(0px 0px 8px rgb(69, 254, 251));
+						filter: drop-shadow(0px 0px 8px rgb(3, 255, 251));
 					}
+				}
+				~ p.main__radiobtn-option {
+					color: rgb(3, 255, 251);
 				}
 			}
 			&:focus {
 				+ div.main__radiobtn--fake {
-					
 					> .main__img {
-						-webkit-filter: drop-shadow(0px 0px 6px rgb(34, 255, 0));
-						filter: drop-shadow(0px 0px 6px rgb(34, 255, 0));
+						-webkit-filter: drop-shadow(0px 0px 8px rgb(69, 254, 251));
+						filter: drop-shadow(0px 0px 8px rgb(3, 255, 251));
 					}
+				}
+				~ p.main__radiobtn-option {
+					color: rgb(3, 255, 251);
 				}
 			}
 			&:hover {
 				+ div.main__radiobtn--fake {
-					
 					> .main__img {
-						-webkit-filter: drop-shadow(0px 0px 6px rgb(0, 255, 251));
-						filter: drop-shadow(0px 0px 6px rgb(0, 255, 251));
-					
+						-webkit-filter: drop-shadow(0px 0px 8px rgb(3, 255, 251));
+						filter: drop-shadow(0px 0px 8px rgb(3, 255, 251));
 					}
+				}
+				~ p.main__radiobtn-option {
+					color: rgb(3, 255, 251);
 				}
 			}
 			&:active {
 				+ div.main__radiobtn--fake {
 					> .main__img {
-						-webkit-filter: drop-shadow(0px 0px 6px #00fffb);
-						filter: drop-shadow(0px 0px 6px rgb(0, 255, 251));
+						-webkit-filter: drop-shadow(0px 0px 8px rgb(3, 255, 251));
+						filter: drop-shadow(0px 0px 8px rgb(3, 255, 251));
 					}
+				}
+				~ p.main__radiobtn-option {
+					color: rgb(3, 255, 251);
 				}
 			}
 		}
 		&--fake {
-			
 			&::after {
 				content: "";
 				display: block;
@@ -84,11 +94,20 @@
 		}
 		&-option {
 			padding-top: 10px;
-			font-size: 1.1rem;
+			font-size: 1.2rem;
+			font-weight: 700;
 		}
 	}
+	&__text-alert {
+		display: inline-block;
+		margin-bottom: 1%;
+		color: #00fffb;
+		font-weight: 700;
+	}
 	&__button-start {
-		  @extend %btn;
-		  margin: 10px;
+		@extend %btn;
+		margin-top: 3%;
+		background-color: #a09ddc;
+		border: 1px solid rgb(41, 41, 41);
 	}
 }
