--- a/src/Components/styles/Modal.scss
+++ b/src/Components/styles/Modal.scss
@@ -7,10 +7,12 @@
     flex-wrap: wrap;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(187, 186, 186, 0.509);
+    background-color: rgba(177, 176, 176, 0.598);
     position: absolute;
     top:0;
     z-index: 9999999999999;
+    font-family: 'Comic Neue', cursive;
+    letter-spacing: 1px;
     &__box{
         position: relative;
         top: 50%;
@@ -20,43 +22,42 @@
         @extend %flexCCC;
         width: 520px;
         height: 220px;
-        background-color: rgb(245, 245, 245);
+        background-color: #0c0b45;
         border-radius: 0.3rem;
-        box-shadow: 0px 0px 3px 3px rgb(65, 63, 63);
+        box-shadow: 0px 0px 3px 3px rgb(237, 236, 236);
         >p {
-            font-size: 1rem;
+            font-size: 1.1rem;
             text-align: left;
             line-height: 25px;
             margin: 0;
-            color: rgb(58, 58, 58);
+            color: rgb(244, 244, 244);
+         
+            >span{
+                font-size: 1.6rem;
+                color:#00fffb;
+                font-weight: 700;
+            }
         }
     }
     &__headline{
         display: flex;
         >h5{
             margin: 0 0 20px 0;
-            color: #0c0b45;
+            color: #fcfcfc;
+            &:focus{
+                outline: none;
+            }
         }
     }
     &__button-ctn{
         margin-top: 7%;
         display: flex;
         justify-content: flex-end;
+        font-family: 'Comic Neue', cursive;
     }
     &__button{
         @extend %btn;
         margin: 1%;
-
-       
-        // display: flex;
-        // font-weight: 500;
-        // background-color: rgb(245, 244, 244);
-        // letter-spacing: 0.06rem;
-        // border: 1px solid #ddd;
-        // border-radius: 0.3rem;
-        // padding: 2%;
-        // margin: 7% 1% 0 1%;
-        // font-size: 11px;
         &-restart{
             background-color: #D999DB;
             border: 1px solid rgb(41, 41, 41);
@@ -73,6 +74,8 @@
        
         &:hover{
             cursor: pointer;
+            // font-size: 1.1rem;
+         
         }
 
     }
@@ -101,33 +104,4 @@
         }
     }
 
-    .relocateCtn {
-        width: 100%;
-    }
-
-    .modalsButtonsContainer {
-        width: 100%;
-        flex-flow: column wrap;
-        justify-content: center;
-        align-items: center;
-    }
-    .modalButtons {
-        width: 90%;
-        order: 2;
-        text-align: center;
-        display: block;
-        padding: 10px 0;
-        margin-top: 10px;
-    }
-
-    .modalButtons.blueButtons {
-        order: 1;
-        margin-left: 0;
-        margin-top: 20px;
-    }
-
-    .modalContainer > .modalBox > form > input {
-        height: 30px;
-        padding-left: 5px;
-    }
 }
