--- a/src/Components/styles/About.scss
+++ b/src/Components/styles/About.scss
@@ -28,6 +28,9 @@
         font-size: 1.2rem;
         font-weight: 700;
         letter-spacing: 1px;
+        &:focus{
+            outline: none;
+        }
         &--content {
        
             font-size: 1.2rem;
