--- a/src/Components/styles/About.scss
+++ b/src/Components/styles/About.scss
@@ -2,7 +2,7 @@
 .about {
 	height: 100%;
     position: relative;
-    @extend %flexRCC;
+    @extend %flexCCC;
 	&__circle {
 		position: absolute;
 		z-index: -1;
@@ -58,12 +58,34 @@
         }
         &__article{
             margin-left: 0;
-            margin-top: 9%;
+            margin-top: 0%;
             padding: 20px;
             width: 100%;
             font-size:1.1rem;
             &--content{
                 font-size: 1.1rem;
+            }
+        }
+    }
+
+}
+
+@media only screen and (max-width: 800px) {
+    .about{
+        &__circle{
+            width: 110px;
+            height: 110px;
+            top: 0px;
+            left: 10px;
+        }
+        &__article{
+            margin-left: 0;
+            margin-top: 0;
+            padding: 20px;
+            width: 100%;
+            font-size:1rem;
+            &--content{
+                font-size: 1rem;
             }
         }
     }
@@ -80,7 +102,7 @@
         }
         &__article{
             margin-left: 0;
-            margin-top: 10%;
+            margin-top: 0%;
             padding: 20px;
             width: 100%;
             font-size:1rem;
