--- a/src/Components/styles/SidebarNav.scss
+++ b/src/Components/styles/SidebarNav.scss
@@ -44,6 +44,9 @@
         width: 100%;
         height: 20%;
         background-color: #0c0c43;
+        &:focus{
+            outline: none;
+        }
     }
     &__menu {
         list-style: none;
