--- a/src/Components/styles/Modal.scss
+++ b/src/Components/styles/Modal.scss
@@ -1,107 +1,102 @@
 @import "./variables";
 
+.modal {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(177, 176, 176, 0.598);
+	position: absolute;
+	top: 0;
+	z-index: 9999999999999;
+	font-family: 'Comic Neue', cursive;
+	letter-spacing: 1px;
+	&__box {
+		position: relative;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		padding: 4%;
+		@extend %flexCCC;
+		width: 520px;
+		height: 220px;
+		background-color: #0c0b45;
+		border-radius: 0.3rem;
+		box-shadow: 0px 0px 3px 3px rgb(237, 236, 236);
+		> p {
+			font-size: 1.1rem;
+			text-align: left;
+			line-height: 25px;
+			margin: 0;
+			color: rgb(244, 244, 244);
 
-.modal{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(177, 176, 176, 0.598);
-    position: absolute;
-    top:0;
-    z-index: 9999999999999;
-    font-family: 'Comic Neue', cursive;
-    letter-spacing: 1px;
-    &__box{
-        position: relative;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 4%;
-        @extend %flexCCC;
-        width: 520px;
-        height: 220px;
-        background-color: #0c0b45;
-        border-radius: 0.3rem;
-        box-shadow: 0px 0px 3px 3px rgb(237, 236, 236);
-        >p {
-            font-size: 1.1rem;
-            text-align: left;
-            line-height: 25px;
-            margin: 0;
-            color: rgb(244, 244, 244);
-         
-            >span{
-                font-size: 1.6rem;
-                color:#00fffb;
-                font-weight: 700;
-            }
-        }
-    }
-    &__headline{
-        display: flex;
-        >h5{
-            margin: 0 0 20px 0;
-            color: #fcfcfc;
-            &:focus{
-                outline: none;
-            }
-        }
-    }
-    &__button-ctn{
-        margin-top: 7%;
-        display: flex;
-        justify-content: flex-end;
-        font-family: 'Comic Neue', cursive;
-    }
-    &__button{
-        @extend %btn;
-        margin: 1%;
-        &-restart{
-            background-color: #D999DB;
-            border: 1px solid rgb(41, 41, 41);
-        }
-        &-home{
-            background-color: #e5e79e;
-            border: 1px solid rgb(41, 41, 41);
-        }
-        &-stats{
-            background-color: #b9f0bd;
-            border: 1px solid rgb(41, 41, 41);
-            
-        }
-       
-        &:hover{
-            cursor: pointer;
-            // font-size: 1.1rem;
-         
-        }
+			> span {
+				font-size: 1.6rem;
+				color: #00fffb;
+				font-weight: 700;
+			}
+		}
+	}
+	&__headline {
+		display: flex;
+		> h5 {
+			margin: 0 0 20px 0;
+			color: #fcfcfc;
+			&:focus {
+				outline: none;
+			}
+		}
+	}
+	&__button-ctn {
+		margin-top: 7%;
+		display: flex;
+		justify-content: flex-end;
+		font-family: 'Comic Neue', cursive;
+	}
+	&__button {
+		@extend %btn;
+		margin: 1%;
+		&-restart {
+			background-color: #d999db;
+			border: 1px solid rgb(41, 41, 41);
+		}
+		&-home {
+			background-color: #e5e79e;
+			border: 1px solid rgb(41, 41, 41);
+		}
+		&-stats {
+			background-color: #b9f0bd;
+			border: 1px solid rgb(41, 41, 41);
+		}
 
-    }
+		&:hover {
+			cursor: pointer;
+			// font-size: 1.1rem;
+		}
+	}
 }
 
 @media only screen and (max-width: 580px) {
-    .modal {
-        &__box{
-            width: 60%;
-            height: auto;
-        }
-       
-        &__button-ctn{
-            width: 100%;
-            flex-flow: column wrap;
-            justify-content: center;
-            align-items: center;
-        }
-        &__button{
-            width: 90%;
-            order: 2;
-            text-align: center;
-            display: block;
-            padding: 10px 0;
-            margin-top: 10px;
-        }
-    }
+	.modal {
+		&__box {
+			width: 60%;
+			height: auto;
+		}
 
+		&__button-ctn {
+			width: 100%;
+			flex-flow: column wrap;
+			justify-content: center;
+			align-items: center;
+		}
+		&__button {
+			width: 90%;
+			order: 2;
+			text-align: center;
+			display: block;
+			padding: 10px 0;
+			margin-top: 10px;
+		}
+	}
 }
