--- a/src/Components/styles/SidebarNav.scss
+++ b/src/Components/styles/SidebarNav.scss
@@ -1,85 +1,79 @@
 @import "./variables";
 
-.mask{
-    background-color: rgba(187, 186, 186, 0.509);
-    border: none;
-    position:absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    display: block;
-    height: 100%;
-    box-sizing: border-box;
+.mask {
+	background-color: rgba(187, 186, 186, 0.509);
+	border: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	display: block;
+	height: 100%;
+	box-sizing: border-box;
 
-    &:focus-within{
-        box-shadow: inset 0px 0px 0px 4px cyan;
-    }
-    &-btn{
-        border: none;
-        width: 1px;
-        height: 1px;
-        margin-left: -20px;
-    }
+	&:focus-within {
+		box-shadow: inset 0px 0px 0px 4px cyan;
+	}
+	&-btn {
+		border: none;
+		width: 1px;
+		height: 1px;
+		margin-left: -20px;
+	}
 }
-
 
 .sidebar {
-    width: 200px;
-    background-color: white;
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100vh;
-    box-shadow: 7px 0px 15px 0px rgba(46, 46, 46, 0.75);
-    transform: translate(0);
-    transition: all 0.2s linear;
-    z-index: 100;
-    &--closed {
-        box-shadow: none;
-        transform: translate(-200px);
-        visibility: hidden;
-    }
-    &__icon-logo{
-        width: 100%;
-        height: 20%;
-        background-color: #0c0c43;
-        &:focus{
-            outline: none;
-        }
-    }
-    &__menu {
-        list-style: none;
-        @extend %flexCAC;
-        padding: 0;
-        height: 80%;
-        background-color: #212052;
+	width: 200px;
+	background-color: white;
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100vh;
+	box-shadow: 7px 0px 15px 0px rgba(46, 46, 46, 0.75);
+	transform: translate(0);
+	transition: all 0.2s linear;
+	z-index: 100;
+	&--closed {
+		box-shadow: none;
+		transform: translate(-200px);
+		visibility: hidden;
+	}
+	&__icon-logo {
+		width: 100%;
+		height: 20%;
+		background-color: #0c0c43;
+		&:focus {
+			outline: none;
+		}
+	}
+	&__menu {
+		list-style: none;
+		@extend %flexCAC;
+		padding: 0;
+		height: 80%;
+		background-color: #212052;
 
-        &-item {
-            margin: 1% 0px;
-            width: 100%;
-            display: inline-block;
-        }
-        &-link{
-            width: 100%;
-            display: inline-block;
-            text-decoration: none;
-            padding: 3% 10%;
-            color: rgb(235, 235, 235);
-            font-size: 1.9rem;
-            text-align: center;
-            font-weight: 700;
-            &:hover, &:focus{
-                text-decoration: none;
-                background-color:#0053B3;
-                color: white;
-            }
-
-        }
-     
-    }
+		&-item {
+			margin: 1% 0px;
+			width: 100%;
+			display: inline-block;
+		}
+		&-link {
+			width: 100%;
+			display: inline-block;
+			text-decoration: none;
+			padding: 3% 10%;
+			color: rgb(235, 235, 235);
+			font-size: 1.9rem;
+			text-align: center;
+			font-weight: 700;
+			&:hover,
+			&:focus {
+				text-decoration: none;
+				background-color: #0053b3;
+				color: white;
+			}
+		}
+	}
 }
-
-
-
-
