--- a/src/Components/styles/Modal.scss
+++ b/src/Components/styles/Modal.scss
@@ -11,7 +11,10 @@
 	top: 0;
 	z-index: 9999999999999;
 	font-family: 'Comic Neue', cursive;
-	letter-spacing: 1px;
+    letter-spacing: 1px;
+    &:focus-within {
+		box-shadow: inset 0px 0px 0px 4px cyan;
+	}
 	&__box {
 		position: relative;
 		top: 50%;
