--- a/src/Components/styles/Quiz.scss
+++ b/src/Components/styles/Quiz.scss
@@ -83,9 +83,9 @@
 		text-align: left;
 		font-size: 1.4rem;
 		@extend %font-SW7;
-		&:focus {
-			outline: none;
-		}
+		// &:focus {
+		// 	outline: none;
+		// }
 	}
 	&__radiobtn {
 		width: 60%;
