--- a/src/Components/styles/Modal.scss
+++ b/src/Components/styles/Modal.scss
@@ -53,6 +53,9 @@
 				outline: none;
 			}
 		}
+		&:focus{
+			outline: none;
+		}
 	}
 	&__button-ctn {
 		margin-top: 7%;
@@ -114,3 +117,4 @@
 		}
 	}
 }
+
