--- a/src/Components/styles/Stats.scss
+++ b/src/Components/styles/Stats.scss
@@ -21,9 +21,9 @@
 		&-ctn {
 			width: 130px;
 			margin: 3% 0;
-			// &:focus {
-			// 	outline: none;
-			// }
+			&:focus {
+				outline: none;
+			}
 		}
 
 		&--img {
@@ -53,9 +53,9 @@
 		&--text {
 			font-size: 2rem;
 			margin: -5px 0 1px 0;
-			// &:focus {
-			// 	outline: none;
-			// }
+			&:focus {
+				outline: none;
+			}
 
 			&-sub {
 				font-size: 1.1rem;
