--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,8 @@ body{
 
 .App{
   height: 100vh;
-  font-family: 'Comic Neue', cursive;
+  font-family: 'Hind Vadodara', sans-serif;
+
 }
 
 .container {
