--- a/src/Components/styles/About.scss
+++ b/src/Components/styles/About.scss
@@ -3,6 +3,16 @@
 	height: 100%;
 	position: relative;
 	@extend %flexCCC;
+
+	&__icon-logo{
+		position: absolute;
+		top: 0;
+		left: 50%;
+		transform: translate(-50%);
+		width: 200px;
+		
+
+	}
 	&__circle {
 		position: absolute;
 		z-index: -1;
@@ -25,14 +35,14 @@
 		margin-left: 20%;
 		color: #fcfcfc;
 		font-size: 1.2rem;
-		font-weight: 700;
+		// font-weight: 700;
 		letter-spacing: 1px;
 		&:focus {
 			outline: none;
 		}
 		&--content {
 			font-size: 1.2rem;
-			font-weight: 700;
+			// font-weight: 700;
 			letter-spacing: 1px;
 		}
 		&--textDeco {
@@ -46,6 +56,10 @@
 
 @media only screen and (max-width: 1000px) {
 	.about {
+		&__icon-logo{
+			width:  180px;
+			top: 30px;
+		}
 		&__circle {
 			width: 150px;
 			height: 150px;
@@ -54,7 +68,7 @@
 		}
 		&__article {
 			margin-left: 0;
-			margin-top: 0%;
+			margin-top: 10%;
 			padding: 20px;
 			width: 100%;
 			font-size: 1.1rem;
@@ -67,17 +81,17 @@
 
 @media only screen and (max-width: 800px) {
 	.about {
+		&__icon-logo{
+			width:  150px;
+			top: 30px;
+		}
+		
 		&__circle {
 			width: 110px;
 			height: 110px;
-			top: 0px;
-			left: 10px;
 		}
 		&__article {
-			margin-left: 0;
-			margin-top: 0;
-			padding: 20px;
-			width: 100%;
+		
 			font-size: 1rem;
 			&--content {
 				font-size: 1rem;
@@ -86,22 +100,138 @@
 	}
 }
 
-@media only screen and (max-width: 600px) {
+
+@media only screen and (max-width: 550px) {
 	.about {
+		&__article {
+			margin-top: 15%;
+		
+		}
+	}
+}
+
+@media only screen and (max-width: 465px) {
+	.about {
+		&__icon-logo{
+			width:  120px;
+			top: 30px;
+		}
 		&__circle {
-			width: 110px;
-			height: 110px;
+			width:  80px;
+			height: 80px;
+		}
+		&__article {
+			margin-top: 10%;
+			padding: 20px 10px 20px 15px;
+			font-size: 0.9rem;
+			&--content {
+				font-size: 0.9rem;
+			}
+		}
+	}
+}
+
+/* iphone 6, 7, 8 */
+@media only screen and (max-width: 414px) and (max-height: 736px) {
+	.about {
+		&__icon-logo{
+			width: 150px;
+		}
+		&__circle {
+			width: 100px;
+			height: 100px;
+	
+		}
+		&__article {
+			margin-top: -5%;
+			padding: 0px 0px 0px 10px;
+			font-size: 1rem;
+			&--content {
+				font-size: 1rem;
+			}
+		}
+	}
+}
+
+
+
+
+@media only screen and (max-width: 375px) and(max-height: 812px) {
+	.about {
+		&__icon-logo{
+			top:20px;
+			width: 150px;
+		}
+		&__circle {
+			width: 85px;
+			height: 85px;
 			top: 0px;
 			left: 10px;
 		}
 		&__article {
-			margin-left: 0;
-			margin-top: 0%;
-			padding: 20px;
-			width: 100%;
+			margin-top: -20%;
+			padding: 0px 15px 0px 30px;
+			// width: 100%;
 			font-size: 1rem;
 			&--content {
 				font-size: 1rem;
+			}
+		}
+	}
+}
+
+
+
+@media only screen and (max-width: 375px) and(max-height: 667px) {
+	.about {
+		&__icon-logo{
+			top:20px;
+			width: 150px;
+		}
+		&__circle {
+			width: 85px;
+			height: 85px;
+			top: 0px;
+			left: 10px;
+		}
+		&__article {
+			margin-top: 10%;
+			padding: 0px 10px 0px 13px;
+			width: 100%;
+			font-size: 0.9rem;
+			&--content {
+				font-size: 0.9rem;
+			}
+		}
+	}
+}
+
+
+/* iphone x */
+
+
+/*iphone 5 */
+@media only screen and (max-width: 320px) and (max-height:568px) {
+	.about {
+		&__icon-logo{
+			top:20px;
+			width: 120px;
+
+		}
+		&__circle {
+			width:  90px;
+			height: 90px;
+			top: 0px;
+			left: 10px;
+		}
+		&__article {
+		
+			margin-top: 20%;
+			padding: 20px 10px 20px 15px;
+			width: 100%;
+			font-size: 0.9rem;
+			&--content {
+				font-size: 0.9rem;
 			}
 		}
 	}
