--- a/src/Components/styles/Modal.scss
+++ b/src/Components/styles/Modal.scss
@@ -10,7 +10,7 @@
 	position: absolute;
 	top: 0;
 	z-index: 9999999999999;
-	font-family: 'Comic Neue', cursive;
+	font-family: 'Hind Vadodara', sans-serif;
 	letter-spacing: 1px;
 	&:focus-within {
 		box-shadow: inset 0px 0px 0px 4px cyan;
@@ -61,7 +61,7 @@
 		margin-top: 7%;
 		display: flex;
 		justify-content: flex-end;
-		font-family: 'Comic Neue', cursive;
+		font-family: 'Hind Vadodara', sans-serif;
 	}
 	&__button {
 		@extend %btn;
