--- a/src/Components/styles/Quiz.scss
+++ b/src/Components/styles/Quiz.scss
@@ -10,7 +10,9 @@
 	}
 	&__icon-catagory {
 		@extend %flexJC;
-		padding: 5px 0;
+		padding-bottom: 2%;
+
+		
 		&:focus {
 			outline: none;
 		}
@@ -63,7 +65,6 @@
 		&-result {
 			@extend %btn;
 			margin: 1%;
-
 			background-color: #a09ddc;
 			border: 1px solid rgb(41, 41, 41);
 		}
@@ -74,21 +75,20 @@
 		width: 100%;
 	}
 	&__text-question {
-		padding: 2% 5%;
+		padding: 1% 5%;
 		text-align: center;
 		overflow-wrap: break-word;
 		word-wrap: break-word;
 		hyphens: auto;
 		width: 70%;
 		text-align: left;
-		font-size: 1.4rem;
-		@extend %font-SW7;
+		font-size: 1.3rem;
+		font-weight: bold;
+		letter-spacing: 1px;
 		&:focus{
 			outline: none;
 		}
-		&:focus{
-			outline: none;
-		}
+		
 	}
 	&__radiobtn {
 		width: 60%;
@@ -113,13 +113,11 @@
 			overflow: hidden;
 			&:checked {
 				+ span.quiz__radiobtn--fake {
-					// border-color: #6200eeff;
 					&::after {
 						background: rgb(107, 1, 255);
 						opacity: 1;
 					}
 					&::before {
-						// background-color: rgba(0, 251, 255, 0.44);
 						opacity: 1;
 					}
 				}
@@ -139,7 +137,6 @@
 			&:hover {
 				+ span.quiz__radiobtn--fake {
 					&::before {
-						// background-color: rgba(0, 251, 255, 0.44);
 						opacity: 1;
 					}
 				}
@@ -147,7 +144,6 @@
 			&:active {
 				+ span.quiz__radiobtn--fake {
 					::before {
-						// background-color: rgba(0, 251, 255, 0.44);
 						opacity: 1;
 					}
 				}
@@ -196,15 +192,14 @@
 			margin-left: 20px;
 			width: 80%;
 			font-size: 1.2rem;
-			font-weight: 400;
-			letter-spacing: 1px;
+		
 		}
 	}
 	&__text-alert {
 		color: #00fffb;
 		letter-spacing: 1px;
 		font-size: 1.2rem;
-		font-weight: 700;
+		font-weight: 600;
 	}
 }
 
